<resources>
    <string name="app_name">Movie Capstone</string>
    <string name="image_description">Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="text_title">Movie Title</string>
    <string name="text_language">Language</string>
    <string name="release_date">0-0-0000</string>
    <string name="vote">vote</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
</resources>